Ingress-resource.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: "ecreks-dep1"
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
  labels:
    app: ecreks-dep1
spec:
  rules:
    - http:
        paths:
          - path: /*
            backend:
              serviceName: "ecreks-service"
              servicePort: 80
